--- a/A_dbms/templates/dbms/agree/agree/agree-table.html
+++ b/A_dbms/templates/dbms/agree/agree/agree-table.html
@@ -19,7 +19,7 @@
                 <td>{{ agree.branch.name }}</td>
                 <td>{{ agree.agree_amount }}</td>
                 <td>{{ agree.get_agree_typ_display }}</td>
-                <td>{{ agree.lending.summary.summary_num }}</td>
+                <td>{{ agree.lending }}</td>
                 <td>{{ agree.get_agree_state_display }}</td>
             </tr>
         {% endfor %}
