--- a/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
@@ -19,6 +19,7 @@
                     {% include 'dbms/agree/modl/mod_form/counter-ground.html' %}
                     {% include 'dbms/agree/modl/mod_form/counter-receivable.html' %}
                     {% include 'dbms/agree/modl/mod_form/counter-stock.html' %}
+                    {% include 'dbms/agree/modl/mod_form/counter-chattel.html' %}
                 </form>
             </div>
             <label id="formErrors"></label>
