--- a/A_dbms/templates/dbms/article/lending/article-lending-tab.html
+++ b/A_dbms/templates/dbms/article/lending/article-lending-tab.html
@@ -2,7 +2,7 @@
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
         <li role="presentation" class="active">
-            <a href="#agree" style="background-color: #f5f5f5"
+            <a href="#lending-agree" style="background-color: #f5f5f5"
                aria-controls="profile" role="tab" data-toggle="tab">委托合同</a></li>
 
         <li role="presentation">
@@ -24,7 +24,7 @@
 
     <!-- Tab panes -->
     <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="agree"><!--委托合同-->
+        <div role="tabpanel" class="tab-pane active" id="lending-agree"><!--委托合同-->
             {% include 'dbms/article/lending/tab/lending-agree.html' %}</div>
 
         <div role="tabpanel" class="tab-pane" id="counter-ensure"><!--保证反担保-->
