--- a/A_dbms/templates/dbms/warrant/modl/mod_form/storage-add-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/storage-add-edit.html
@@ -20,4 +20,9 @@
         <label id="e_transfer" class="pull-right">{{ form_storage_add_edit.transfer.errors }}</label>
     </div>
 
+    <div class="form-group"><!--出入库说明-->
+        <label for="id_storage_explain" class="col-sm-3 control-label">{{ form_storage_add_edit.storage_explain.label }}：</label>
+        <div class="col-sm-9">{{ form_storage_add_edit.storage_explain }}</div>
+        <label id="e_storage_explain" class="pull-right">{{ form_storage_add_edit.storage_explain.errors }}</label>
+    </div>
 </div>
