--- a/A_dbms/templates/dbms/agree/extra/js-agree-sign.html
+++ b/A_dbms/templates/dbms/agree/extra/js-agree-sign.html
@@ -5,6 +5,7 @@
     });
 
     function bindSignAgreeB() {
+        console.log("bindSignAgreeB");
         $('#signAgreeB').click(function () {
             console.log("bindSignAgreeB");
             $('#agreeSingModal').modal('show');
