--- a/A_dbms/templates/dbms/agree/extra/js-counter-add.html
+++ b/A_dbms/templates/dbms/agree/extra/js-counter-add.html
@@ -6,6 +6,7 @@
     });
 
     function bindAddCounterB() {
+        console.log("bindAddCounterB");
         $('#addCounterB').click(function () {
             {#console.log("bindAddCounterB")#}
             $('#addCounterModal').modal('show');
@@ -17,33 +18,42 @@
             console.log("bind_id_counter_typ");
             $('.extend').hide();
             var selected_counter_typ = $('#id_counter_typ').val();
-
             console.log(selected_counter_typ);
-
+            {#    <!-- COUNTER_TYP_LIST = (#}
+            {#(1, '企业担保'), (2, '个人保证'),#}
+            {#(11, '房产抵押'), (12, '土地抵押'), (13, '动产抵押'), (15, '车辆抵押'),#}
+            {#(31, '应收质押'), (32, '股权质押'), (33, '票据质押'),#}
+            {#(51, '股权预售'), (52, '房产预售'), (53, '土地预售'))-->#}
             switch (selected_counter_typ) {
-                case ('1'):
+                case ('1'): {#企业保证#}
                     $('#form_counter_assure_c').show();
                     break;
-                case ('2'):
+                case ('2'):{#个人保证#}
                     $('#form_counter_assure_p').show();
                     break;
-                case ('11'):
+                case ('11'):{#房产抵押#}
                     $('#form_counter_house').show();
                     break;
-                case ('21'):
+                case ('52'):{#房产预售#}
                     $('#form_counter_house').show();
                     break;
-                case ('12'):
+                case ('12'):{#土地抵押#}
                     $('#form_counter_ground').show();
                     break;
-                case ('22'):
+                case ('53'):{#土地预售#}
                     $('#form_counter_ground').show();
                     break;
-                case ('31'):
+                case ('31'):{#应收质押#}
                     $('#form_counter_receivable').show();
                     break;
-                case ('32'):
+                case ('32'):{#股权质押#}
                     $('#form_counter_stock').show();
+                    break;
+                case ('51'):{#股权预售#}
+                    $('#form_counter_stock').show();
+                    break;
+                case ('13'):{#动产质押#}
+                    $('#form_counter_chattel').show();
                     break;
                 default:
                     $('.extend').hide()
@@ -60,9 +70,7 @@
                 postData[n] = v;
             });
             var postDataStr = JSON.stringify(postData);
-
             console.log(postDataStr);
-
             $.ajax({
                 url: '/dbms/agree/counter/add/',
                 type: 'POST',
@@ -76,7 +84,7 @@
                         window.location.reload();
                     } else {
                         alert(arg.message);
-                        $('#e_agree_amount').text(dict.forme.agree_amount);
+                        $('#e_agree_amount').text(arg.forme.agree_amount);
                     }
                 }
             })
