--- a/A_dbms/templates/dbms/article/scan/article-tab.html
+++ b/A_dbms/templates/dbms/article/scan/article-tab.html
@@ -16,10 +16,10 @@
         <li role="presentation">
             <a href="#single" style="background-color: #f5f5f5"
                aria-controls="settings" role="tab" data-toggle="tab">单项额度</a></li>
-        <li role="presentation">
-            <a href="#lenging" style="background-color: #f5f5f5"
-               aria-controls="settings" role="tab" data-toggle="tab">分笔发放</a></li>
         <li role="presentation" class="active">
+            <a href="#lenging" style="background-color: #f5f5f5"
+               aria-controls="settings" role="tab" data-toggle="tab">放款次序</a></li>
+        <li role="presentation">
             <a href="#agree" style="background-color: #f5f5f5"
                aria-controls="settings" role="tab" data-toggle="tab">委托合同</a></li>
         <li role="presentation">
@@ -39,9 +39,9 @@
             {% include 'dbms/appraisal/scan/tab/sign.html' %} </div>
         <div role="tabpanel" class="tab-pane" id="single"> <!--单项额度-->
             {% include 'dbms/appraisal/scan/tab/single.html' %} </div>
-        <div role="tabpanel" class="tab-pane" id="lenging"> <!--分笔发放-->
+        <div role="tabpanel" class="tab-pane active" id="lenging"> <!--放款次序-->
             {% include 'dbms/article/scan/tab/lending.html' %} </div>
-        <div role="tabpanel" class="tab-pane active" id="agree"> <!--委托合同-->
+        <div role="tabpanel" class="tab-pane" id="agree"> <!--委托合同-->
             {% include 'dbms/article/scan/tab/agree.html' %} </div>
         <div role="tabpanel" class="tab-pane" id="article-change"><!--项目变更-->
             {% include 'dbms/appraisal/scan/tab/article-change.html' %} </div>
