--- a/A_dbms/templates/dbms/meeting/article/detail/experts.html
+++ b/A_dbms/templates/dbms/meeting/article/detail/experts.html
@@ -8,6 +8,7 @@
         {#<caption><h4>项目管理</h4></caption>#}
         <thead>
         <tr style="text-align: center">
+            <th>序号</th>
             <th>评审姓名</th>
             <th>单位</th>
             <th>职务</th>
@@ -22,6 +23,7 @@
         <tbody id="expert-allot-tb">
         {% for expert in article_obj.expert.all %}
             <tr expert-nid="{{ expert.id }}">
+                <td>{{forloop.counter }}</td>
                 <td>{{ expert.name }}</td>
                 <td>{{ expert.organization }}</td>
                 <td>{{ expert.job }}</td>
