--- a/A_dbms/templates/dbms/provide/agree/scan/provide-agree-tab.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/provide-agree-tab.html
@@ -2,7 +2,10 @@
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
         <li role="presentation">
-            <a href="#provide-agree" style="background-color: #f5f5f5"
+            <a href="#provide-article" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab">项目情况</a></li>
+        <li role="presentation">
+            <a href="#agree" style="background-color: #f5f5f5"
                aria-controls="messages" role="tab" data-toggle="tab">合同</a></li>
         <li role="presentation">
             <a href="#provide-hypothec" style="background-color: #f5f5f5"
@@ -28,8 +31,10 @@
     </ul>
 
     <!-- Tab panes -->
-    <div class="tab-content" id="agree-warrant">
-        <div role="tabpanel" class="tab-pane" id="provide-agree"><!--合同-->
+    <div class="tab-content" id="provide-agree">
+        <div role="tabpanel" class="tab-pane" id="provide-article"><!--项目情况-->
+            {% include 'dbms/provide/agree/scan/tab/provide-article.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="agree"><!--合同-->
             {% include 'dbms/agree/scan/tab/agree-counters.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="provide-hypothec"><!--他权-->
             {% include 'dbms/warrant/agree/scan/tab/agree-hypothec.html' %}</div>
