--- a/A_dbms/templates/dbms/warrant/modl/evaluate-add-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/evaluate-add-mod.html
@@ -1,23 +1,24 @@
-<div class="modal fade" id="editArticleModal" tabindex="-1"
-     role="dialog" aria-labelledby="editArticleModal">
+<div class="modal fade" id="addEvaluateModal" tabindex="-1"
+     role="dialog" aria-labelledby="addEvaluateModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="editArticleModalLabel">修改项目
-                    <input style="display: none" name="article_id" id="articleEditId" value="{{ article_obj.id }}">
+                <h4 class="modal-title" id="addEvaluateModalLabel">评估
+                    <input style="display: none" name="warrant_id" id="id_warrant_id" value={{ warrant_obj.id }}>
                 </h4>
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
-                    {% include 'dbms/article/modl/mod_form/article-add-edit.html' %}
+                    {% include 'dbms/warrant/modl/mod_form/evaluate-add-edit.html' %}
                 </form>
             </div>
+            <label id="formErrors"></label>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="editArticleModalOk">修改</button>
+                <button type="button" class="btn btn-primary" id="addEvaluateModalOk">添加</button>
             </div>
         </div>
     </div>
