--- a/A_dbms/templates/dbms/warrant/modl/mod_form/house-add-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/house-add-edit.html
@@ -18,5 +18,10 @@
         <div class="col-sm-9">{{ form_house_add_edit.house_area }}</div>
         <label id="e_house_area" class="pull-right">{{ form_house_add_edit.house_area.errors }}</label>
     </div>
+    <div class="form-group"><!--楼盘名称-->
+        <label for="id_house_name" class="col-sm-3 control-label">{{ form_house_add_edit.house_name.label }}：</label>
+        <div class="col-sm-9">{{ form_house_add_edit.house_name }}</div>
+        <label id="e_house_name" class="pull-right">{{ form_house_add_edit.house_name.errors }}</label>
+    </div>
 
 </div>
