--- a/A_dbms/templates/dbms/warrant/scan/warrant-summry.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant-summry.html
@@ -4,19 +4,26 @@
         <label class="navbar-right">
             {% if warrant_typ == 99 %}
                 <a class="btn btn-primary btn-sm " id="addGuarantyB">添加抵押物</a><!--#path('warrant/storages/'-->
-            {% elif warrant_typ in house_ground_list %}
+            {% elif warrant_typ in HOUSE_GROUND_TYP_LIST %}
                 <a class="btn btn-primary btn-sm " id="addOwerShip">添加产权证</a><!--#path('warrant/storages/'-->
                 <a class="btn btn-primary btn-sm " id="addEvaluateB">评估</a><!--#path('warrant/evaluate/'-->
+            {% elif warrant_typ == 2 %}
+                <a class="btn btn-primary btn-sm " id="addOwerShip">添加产权证</a><!--#path('warrant/storages/'-->
+                <a class="btn btn-primary btn-sm " id="addEvaluateB">评估</a><!--#path('warrant/evaluate/'-->
+                <a class="btn btn-primary btn-sm " id="addHouseBagB">添加房产包</a><!--#path('warrant/storages/'-->
             {% endif %}
             <a class="btn btn-primary btn-sm " id="editWarrant">修改</a><!--#path('warrant/edit/'-->
             <a class="btn btn-primary btn-sm " id="addStoragesB">出入库</a><!--#path('warrant/storages/'-->
             <a class="btn btn-danger btn-sm " id="delWarrant">删除</a><!--#path('warrant/del/'-->
+
         </label>
     </div>
 
     <div class="panel-body row" style="padding: 1px;">
         {% if warrant_typ == 1 %}
             {% include 'dbms/warrant/scan/warrant-summry-house.html' %}
+        {% elif  warrant_typ == 2 %}
+            {% include 'dbms/warrant/scan/warrant-summry-housebag.html' %}
         {% elif  warrant_typ == 5 %}
             {% include 'dbms/warrant/scan/warrant-summry-ground.html' %}
         {% elif  warrant_typ == 11 %}
