--- a/A_dbms/templates/dbms/warrant/scan/warrant-tab.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant-tab.html
@@ -8,7 +8,17 @@
             <li role="presentation" class="active">
                 <a href="#guaranty" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">抵押物 </a></li>
-        {% elif warrant_typ in house_ground_list %}
+        {% elif warrant_typ in HOUSE_GROUND_TYP_LIST %}
+            <li role="presentation">
+                <a href="#evaluate" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">评估情况 </a></li>
+            <li role="presentation">
+                <a href="#mortgage" style="background-color: #f5f5f5"
+                   aria-controls="settings" role="tab" data-toggle="tab">抵押情况 </a></li>
+            <li role="presentation" class="active">
+                <a href="#ownership" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">产权人 </a></li>
+        {% elif warrant_typ == 2 %}
             <li role="presentation">
                 <a href="#valuate" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">评估情况 </a></li>
@@ -18,6 +28,9 @@
             <li role="presentation" class="active">
                 <a href="#ownership" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">产权人 </a></li>
+            <li role="presentation">
+                <a href="#housebag" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">房产包 </a></li>
         {% endif %}
     </ul>
     <!-- Tab panes -->
@@ -27,13 +40,22 @@
         {% if warrant_typ == 99 %}
             <div role="tabpanel" class="tab-pane active" id="guaranty"> <!--抵押物-->
                 {% include 'dbms/warrant/scan/warrant_tab/guaranty.html' %}</div>
-        {% elif warrant_typ in house_ground_list %}
+        {% elif warrant_typ in HOUSE_GROUND_TYP_LIST %}
+            <div role="tabpanel" class="tab-pane" id="evaluate"> <!--评估情况-->
+                {% include 'dbms/warrant/scan/warrant_tab/valuate.html' %}</div>
+            <div role="tabpanel" class="tab-pane" id="mortgage"> <!--抵押情况-->
+                {% include 'dbms/warrant/scan/warrant_tab/mortgage.html' %}</div>
+            <div role="tabpanel" class="tab-pane active" id="ownership"> <!--产权人-->
+                {% include 'dbms/warrant/scan/warrant_tab/ownership.html' %}</div>
+        {% elif warrant_typ == 2 %}
             <div role="tabpanel" class="tab-pane" id="valuate"> <!--评估情况-->
                 {% include 'dbms/warrant/scan/warrant_tab/valuate.html' %}</div>
             <div role="tabpanel" class="tab-pane" id="mortgage"> <!--抵押情况-->
                 {% include 'dbms/warrant/scan/warrant_tab/mortgage.html' %}</div>
             <div role="tabpanel" class="tab-pane active" id="ownership"> <!--产权人-->
                 {% include 'dbms/warrant/scan/warrant_tab/ownership.html' %}</div>
+            <div role="tabpanel" class="tab-pane" id="housebag"> <!--房产包-->
+                {% include 'dbms/warrant/scan/warrant_tab/housebag.html' %}</div>
         {% endif %}
     </div>
 </div>
