--- a/A_dbms/templates/dbms/warrant/scan/warrant_tab/mortgage.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant_tab/mortgage.html
@@ -8,21 +8,27 @@
         {#<caption><h4>项目管理</h4></caption>#}
         <thead>
         <tr style="text-align: center">
-            <th>合同编号</th>
-            <th>合同金额</th>
+            <th>编号</th>
+            <th>客户名称</th>
             <th>项目编号</th>
+            <th>纪要编号</th>
+            <th>放款次序</th>
+            <th>金额</th>
         </tr>
         </thead>
         <tbody>
-        {% for lendingwarrant in warrant_obj.lending_warrant.all %}
-            {% for agree in lendingwarrant.sure.lending.agree_lending.all %}
-                <tr>
-                    <td>{{ agree.agree_num }}</td>
-                    <td>{{ agree.agree_amount }}</td>
-                    <td>{{ agree.lending.summary }}</td>
-                </tr>
-            {% endfor %}
+        {% for lendingwarrant in p_list %}
+            <tr>
+                <td>{{ forloop.counter }}</td>
+                <td>{{ lendingwarrant.sure.lending.summary.custom }}</td>
+                <td>{{ lendingwarrant.sure.lending.summary }}</td>
+                <td>{{ lendingwarrant.sure.lending.summary.summary_num  }}</td>
+                <td>{{ lendingwarrant.sure.lending.get_order_display  }}</td>
+                <td>{{ lendingwarrant.sure.lending.order_amount }}</td>
+            </tr>
         {% endfor %}
         </tbody>
     </table>
+    {% include 'dbms/board/page.html' %}
+
 </div>
