--- a/A_dbms/templates/dbms/appraisal/lending/appraisal-lending-tab.html
+++ b/A_dbms/templates/dbms/appraisal/lending/appraisal-lending-tab.html
@@ -14,11 +14,14 @@
             <a href="#counter-receive" style="background-color: #f5f5f5"
                aria-controls="settings" role="tab" data-toggle="tab">应收</a></li>
         <li role="presentation">
-            <a href="#counter-stock " style="background-color: #f5f5f5"
+            <a href="#counter-stock" style="background-color: #f5f5f5"
                aria-controls="home" role="tab" data-toggle="tab">股权</a></li>
-         <li role="presentation">
-            <a href="#counter-chattel " style="background-color: #f5f5f5"
+        <li role="presentation">
+            <a href="#counter-chattel" style="background-color: #f5f5f5"
                aria-controls="home" role="tab" data-toggle="tab">动产</a></li>
+        <li role="presentation">
+            <a href="#counter-draft" style="background-color: #f5f5f5"
+               aria-controls="home" role="tab" data-toggle="tab">票据</a></li>
     </ul>
 
     <!-- Tab panes -->
@@ -35,5 +38,7 @@
             {% include 'dbms/appraisal/lending/tab/counter-stock.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="counter-chattel"><!--动产抵押-->
             {% include 'dbms/appraisal/lending/tab/counter-chattel.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="counter-draft"><!--票据质押-->
+            {% include 'dbms/appraisal/lending/tab/counter-draft.html' %}</div>
     </div>
 </div>
