--- a/A_dbms/templates/dbms/warrant/scan/warrant-tab.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant-tab.html
@@ -1,14 +1,17 @@
 <div>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
-        <li role="presentation">
-            <a href="#storages" style="background-color: #f5f5f5"
-               aria-controls="profile" role="tab" data-toggle="tab">出入库 </a></li>
-        {% if warrant_typ == 99 %}
+        {% if warrant_typ == 99 %} <!--他权-->
+            <li role="presentation">
+                <a href="#storages" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">出入库 </a></li>
             <li role="presentation" class="active">
                 <a href="#guaranty" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">抵押物 </a></li>
-        {% elif warrant_typ in HOUSE_GROUND_TYP_LIST %}
+        {% elif warrant_typ in HOUSE_GROUND_TYP_LIST %} <!--房产、土地-->
+            <li role="presentation">
+                <a href="#storages" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">出入库 </a></li>
             <li role="presentation">
                 <a href="#evaluate" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">评估情况 </a></li>
@@ -18,7 +21,10 @@
             <li role="presentation" class="active">
                 <a href="#ownership" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">产权人 </a></li>
-        {% elif warrant_typ == 2 %}
+        {% elif warrant_typ == 2 %} <!--房产包-->
+            <li role="presentation">
+                <a href="#storages" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">出入库 </a></li>
             <li role="presentation">
                 <a href="#valuate" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">评估情况 </a></li>
@@ -31,23 +37,35 @@
             <li role="presentation">
                 <a href="#housebag" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">房产包 </a></li>
+        {% elif warrant_typ == 31 %} <!--票据包-->
+            <li role="presentation">
+                <a href="#storages" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">出入库 </a></li>
+            <li role="presentation" class="active">
+                <a href="#draftbag" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">票据包</a></li>
+
         {% endif %}
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
-        <div role="tabpanel" class="tab-pane" id="storages"> <!--出入库-->
-            {% include 'dbms/warrant/scan/warrant_tab/storages.html' %}</div>
-        {% if warrant_typ == 99 %}
+        {% if warrant_typ == 99 %} <!--他权-->
+            <div role="tabpanel" class="tab-pane" id="storages"> <!--出入库-->
+                {% include 'dbms/warrant/scan/warrant_tab/storages.html' %}</div>
             <div role="tabpanel" class="tab-pane active" id="guaranty"> <!--抵押物-->
                 {% include 'dbms/warrant/scan/warrant_tab/guaranty.html' %}</div>
-        {% elif warrant_typ in HOUSE_GROUND_TYP_LIST %}
+        {% elif warrant_typ in HOUSE_GROUND_TYP_LIST %} <!--房产、土地-->
+            <div role="tabpanel" class="tab-pane" id="storages"> <!--出入库-->
+                {% include 'dbms/warrant/scan/warrant_tab/storages.html' %}</div>
             <div role="tabpanel" class="tab-pane" id="evaluate"> <!--评估情况-->
                 {% include 'dbms/warrant/scan/warrant_tab/valuate.html' %}</div>
             <div role="tabpanel" class="tab-pane" id="mortgage"> <!--抵押情况-->
                 {% include 'dbms/warrant/scan/warrant_tab/mortgage.html' %}</div>
             <div role="tabpanel" class="tab-pane active" id="ownership"> <!--产权人-->
                 {% include 'dbms/warrant/scan/warrant_tab/ownership.html' %}</div>
-        {% elif warrant_typ == 2 %}
+        {% elif warrant_typ == 2 %} <!--房产包-->
+            <div role="tabpanel" class="tab-pane" id="storages"> <!--出入库-->
+                {% include 'dbms/warrant/scan/warrant_tab/storages.html' %}</div>
             <div role="tabpanel" class="tab-pane" id="valuate"> <!--评估情况-->
                 {% include 'dbms/warrant/scan/warrant_tab/valuate.html' %}</div>
             <div role="tabpanel" class="tab-pane" id="mortgage"> <!--抵押情况-->
@@ -56,6 +74,11 @@
                 {% include 'dbms/warrant/scan/warrant_tab/ownership.html' %}</div>
             <div role="tabpanel" class="tab-pane" id="housebag"> <!--房产包-->
                 {% include 'dbms/warrant/scan/warrant_tab/housebag.html' %}</div>
+        {% elif warrant_typ == 31 %} <!--票据包-->
+            <div role="tabpanel" class="tab-pane" id="storages"> <!--出入库-->
+                {% include 'dbms/warrant/scan/warrant_tab/storages.html' %}</div>
+            <div role="tabpanel" class="tab-pane active" id="draftbag"> <!--票据包-->
+                {% include 'dbms/warrant/scan/warrant_tab/draftbag.html' %}</div>
         {% endif %}
     </div>
 </div>
