--- a/A_dbms/templates/dbms/appraisal/appraisal/appraisal-table.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal/appraisal-table.html
@@ -22,7 +22,7 @@
                         {{ article.article_num }}
                     </a>
                 </td>
-                <td>{{ article.custom }}</td>
+                <td>{{ article.custom.short_name }}</td>
                 <td>{{ article.amount }}</td>
                 <td>{{ article.credit_term }}</td>
                 <td>{{ article.director.name }}</td>
