--- a/A_dbms/templates/dbms/provide/provide/provide-table.html
+++ b/A_dbms/templates/dbms/provide/provide/provide-table.html
@@ -29,8 +29,8 @@
                     <td><a href="{% url 'dbms:pigeonhole_scan' provide_id=provide.id %}">
                         {{ forloop.counter }} </a></td>
                 {% endif %}
-                <td>{{ provide.notify.agree.lending.summary.custom }}</td>
-                <td>{{ provide.notify.agree.branch }}</td>
+                <td>{{ provide.notify.agree.lending.summary.custom.short_name }}</td>
+                <td>{{ provide.notify.agree.branch.short_name }}</td>
                 <td>{{ provide.notify.agree.agree_num }}</td>
                 <td>{{ provide.provide_money }}</td>
                 <td>{{ provide.get_provide_typ_display }}</td>
