--- a/A_dbms/templates/dbms/provide/extra/js-notify-del.html
+++ b/A_dbms/templates/dbms/provide/extra/js-notify-del.html
@@ -7,7 +7,7 @@
     function bindDelNotifyB() {
         console.log("bindDelNotifyB---");
 
-        $('#provide-notify-tb').on('click', '.delNotifyB', function () {
+        $('#notify-tb').on('click', '.delNotifyB', function () {
             console.log("bindDelNotifyB");
             var delNotifyNid = $(this).parent().parent().attr('notify-nid');
             console.log(delNotifyNid);
