--- a/A_dbms/templates/dbms/review/review/review-filter.html
+++ b/A_dbms/templates/dbms/review/review/review-filter.html
@@ -1,7 +1,33 @@
 <div>
+
+    <label>
+        {% if kwargs.review_state == None %}
+            <a class="active btn btn-primary btn-sm"
+               href="{% url 'dbms:review_all' %}">全部</a>
+        {% else %}
+            <a class="btn btn btn-primary btn-sm"
+               href="{% url 'dbms:review_all' %}">全部</a>
+        {% endif %}
+
+        {# 方式一：#}
+        {% for review_state in REVIEW_STATE_LIST %}
+            {% if review_state.0 == kwargs.review_state %}
+                <a class="active btn btn-primary btn-sm"
+                   href="{% url 'dbms:review' review_state=review_state.0 %}">
+                    {{ review_state.1 }}
+                </a>
+            {% else %}
+                <a class="btn btn-primary btn-sm"
+                   href="{% url 'dbms:review' review_state=review_state.0 %}">
+                    {{ review_state.1 }}
+                </a>
+            {% endif %}
+        {% endfor %}
+    </label>
+
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="text" class="form-control" placeholder="搜索客户">
+            <input type="search" name="_s" class="form-control" placeholder="姓名、地址、电话">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
