--- a/A_dbms/templates/dbms/custom/scan/custom-summry-p.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry-p.html
@@ -9,12 +9,12 @@
         授信总额：{{ custom_obj.credit_amount }}
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        流贷余额：{{ custom_obj.flow_loan }}
+        流贷余额：{{ custom_obj.custom_flow }}
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        承兑余额：{{ custom_obj.accept_loan }}
+        承兑余额：{{ custom_obj.custom_accept }}
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        保函余额：{{ custom_obj.back_loan }}
+        保函余额：{{ custom_obj.custom_back }}
     </label>
 </div>
